// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Question component 1`] = `
Array [
  <p>
    Content
  </p>,
  <button
    onClick={[Function]}
  >
    No
  </button>,
  <button
    onClick={[Function]}
  >
    Yes
  </button>,
]
`;

exports[`Question Question component with labels 1`] = `
Array [
  <p>
    Content
  </p>,
  <button
    onClick={[Function]}
  >
    Reject Label
  </button>,
  <button
    onClick={[Function]}
  >
    Confirm Label
  </button>,
]
`;
